tests/integration/errors/undefined_function.rsg
// TEST: compile_error
// EXPECT-ERROR: undefined function 'nonexistent'
module test_err

fn main() {
    x := nonexistent(42)
}
